# kira-cluster

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: cascade_levels.rs  tool_compare.rs
src/: error.rs  main.rs
src/alignment/: banded.rs  farrar.rs  gapped_avx2.rs  gapped_neon.rs  gapped_scalar.rs  gapped_simd.rs  gpu.rs  mod.rs  scoring.rs
src/cascade/: levels.rs  mod.rs
src/cli/: mmseqs_compat.rs  mod.rs
src/cluster/: filter.rs  greedy.rs  kmer.rs  mod.rs  output.rs  table.rs
src/db/: createdb.rs  layout.rs  mod.rs
src/gpu/: cuda.rs  kernels.cu  mod.rs
src/index/: bloom.rs  build.rs  df.rs  index_info.rs  manifest.rs  mod.rs  scoring.rs  search.rs  segment.rs  sketch.rs  update.rs
src/io/: atomic.rs  mmap.rs  mod.rs
src/profile/: mod.rs  timer.rs
src/scheduler/: batch.rs  mod.rs
src/seq/: fasta.rs  fastq.rs  mod.rs
src/simd/: avx2.rs  mod.rs  scalar.rs
src/util/: log.rs  paths.rs
tests/: alignment_equivalence.rs  alignment_scalar.rs  batch_determinism.rs  cascade_levels.rs  cli_smoke.rs  cluster_determinism.rs  cluster_sensitive.rs  cluster_small.rs  codec_roundtrip.rs  determinism_build_index.rs  determinism_createdb.rs  gpu_cpu_equivalence.rs  index_build_determinism.rs  index_search_correctness_small.rs  index_search_determinism.rs  index_search_parity_stage7.rs  index_size_reduction.rs  index_update_manifest.rs  pgm_determinism.rs  pgm_lookup_correctness.rs  profile_counter_sanity.rs  profile_determinism.rs  search_adaptive_pruning_determinism.rs  tune_index_idempotent.rs
tests/data/: cluster_sensitive.fasta  index_query.fasta  (+3 more)
(+14 files in other folders)
