[package]
name = "kira-cluster"
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Deterministic Rust CLI for MMseqs2-like approximate high-throughput sequence clustering/search workflows."
repository = "https://github.com/ARyaskov/kira-cluster"
keywords = [
    "bioinformatics",
    "protein",
    "proteomics"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::proteomics",
    "science::bioinformatics::sequence-analysis",
    "command-line-utilities"
]
build = "build.rs"

[features]
default = []
cuda = []
roaring = ["dep:roaring"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
rayon = "1.10"
roaring = { version = "0.10", optional = true }
flate2 = "1.0"
kira-fastq = "0.3.0"
kira_kv_engine = { version = "0.6.2", default-features = false, features = ["pgm", "parallel"] }

[dev-dependencies]

[build-dependencies]
cc = "1.1"

[[bench]]
name = "cascade_levels"
harness = false

[[bench]]
name = "tool_compare"
harness = false
